update clickHandler and db with AceDB

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 /AtlasLootClassic/Core/MapPOI.lua
 /.vscode
+/AtlasLootClassic/Libs/*
+/AtlasLootClassic_Options/Libs/*
 Global.lua
 Collections.lua
 Crafting.lua
