--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ before_script:
   - /home/travis/.luarocks/bin/luacheck . --no-color -q
 
 script: 
-  - if [[ "$TRAVIS_BRANCH" == "master" && "$TRAVIS_PULL_REQUEST" == "false" ]]; then ./cf_translations.sh; fi
+  - if [[ "$TRAVIS_PULL_REQUEST" == "false" ]]; then ./cf_translations.sh; fi
   - curl -s https://raw.githubusercontent.com/BigWigsMods/packager/master/release.sh | bash
  
 branches:
