--- a/.github/workflows/build-classic.yml
+++ b/.github/workflows/build-classic.yml
@@ -3,7 +3,7 @@ name: CI
 on:
   push:
     branches:
-      - master
+      - classic
     tags:
       - '*'
 
@@ -27,15 +27,6 @@ jobs:
       uses: BigWigsMods/packager@master
       with:
         args: -g classic -m .pkgmeta-classic -w 25185
-      env:
-        CF_API_KEY: ${{ secrets.CF_API_KEY }}
-        GITHUB_OAUTH: ${{ secrets.GITHUB_OAUTH }}
-        WOWI_API_TOKEN: ${{ secrets.WOWI_API_TOKEN }}
-
-    - name: Create BC Package
-      uses: BigWigsMods/packager@master
-      with:
-        args: -g bc -m .pkgmeta-bc
       env:
         CF_API_KEY: ${{ secrets.CF_API_KEY }}
         GITHUB_OAUTH: ${{ secrets.GITHUB_OAUTH }}
