--- a/.github/workflows/build-bc.yml
+++ b/.github/workflows/build-bc.yml
@@ -9,10 +9,13 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
+    - uses: actions/checkout@v1
+      with:
+        fetch-depth: 500
+
     - name: Install and run Luacheck
       uses: nebularg/actions-luacheck@v1
       with:
