--- a/.github/workflows/build-classic.yml
+++ b/.github/workflows/build-classic.yml
@@ -13,8 +13,6 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
-      with:
-        fetch-depth: 500
 
     - name: Install and run Luacheck
       uses: nebularg/actions-luacheck@v1
@@ -32,5 +30,5 @@ jobs:
         args: -g classic -m .pkgmeta-classic -w 25185
       env:
         CF_API_KEY: ${{ secrets.CF_API_KEY }}
-        GITHUB_OAUTH: ${{ secrets.GITHUB_OAUTH }}
+        GITHUB_OAUTH: ${{ secrets.GITHUB_TOKEN }}
         WOWI_API_TOKEN: ${{ secrets.WOWI_API_TOKEN }}
