--- a/.github/workflows/build-bc.yml
+++ b/.github/workflows/build-bc.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Create BC Package
       uses: BigWigsMods/packager@master
       with:
-        args: -g bc -m .pkgmeta-bc -n "{package-name}-{project-version}"
+        args: -g bc -m .pkgmeta-bc -w 25953 -n "{package-name}-{project-version}"
       env:
         CF_API_KEY: ${{ secrets.CF_API_KEY }}
         GITHUB_OAUTH: ${{ secrets.GITHUB_TOKEN }}
