--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,10 +34,10 @@ jobs:
         WOWI_API_TOKEN: ${{ secrets.WOWI_API_TOKEN }}
         WAGO_API_TOKEN: ${{ secrets.WAGO_API_TOKEN }}
 
-    - name: Create BC Package
+    - name: Create BCC Package
       uses: BigWigsMods/packager@master
       with:
-        args: -g bc -m .pkgmeta-bc -w 25953
+        args: -g bcc -m .pkgmeta-bcc -w 25953
       env:
         CF_API_KEY: ${{ secrets.CF_API_KEY }}
         GITHUB_OAUTH: ${{ secrets.GITHUB_TOKEN }}
