--- a/.github/workflows/build-bcc.yml
+++ b/.github/workflows/build-bcc.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Create BCC Package
       uses: BigWigsMods/packager@master
       with:
-        args: -g bcc -m .pkgmeta-bcc -w 25953 -n "{package-name}-{project-version}"
+        args: -g bcc -m .pkgmeta-bcc -w 25953
       env:
         CF_API_KEY: ${{ secrets.CF_API_KEY }}
         GITHUB_OAUTH: ${{ secrets.GITHUB_TOKEN }}
