--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,30 +24,8 @@ jobs:
       env:
         CF_API_KEY: ${{ secrets.CF_API_KEY }}
 
-    - name: Create Classic Package
+    - name: Create Package
       uses: BigWigsMods/packager@master
-      with:
-        args: -g classic -m .pkgmeta-classic -w 25185
-      env:
-        CF_API_KEY: ${{ secrets.CF_API_KEY }}
-        GITHUB_OAUTH: ${{ secrets.GITHUB_TOKEN }}
-        WOWI_API_TOKEN: ${{ secrets.WOWI_API_TOKEN }}
-        WAGO_API_TOKEN: ${{ secrets.WAGO_API_TOKEN }}
-
-    - name: Create BCC Package
-      uses: BigWigsMods/packager@master
-      with:
-        args: -g bcc -m .pkgmeta-bcc -w 25953
-      env:
-        CF_API_KEY: ${{ secrets.CF_API_KEY }}
-        GITHUB_OAUTH: ${{ secrets.GITHUB_TOKEN }}
-        WOWI_API_TOKEN: ${{ secrets.WOWI_API_TOKEN }}
-        WAGO_API_TOKEN: ${{ secrets.WAGO_API_TOKEN }}
-
-    - name: Create Wrath Package
-      uses: BigWigsMods/packager@master
-      with:
-        args: -g wrath -m .pkgmeta-bcc
       env:
         CF_API_KEY: ${{ secrets.CF_API_KEY }}
         GITHUB_OAUTH: ${{ secrets.GITHUB_TOKEN }}
