--- a/.github/workflows/build-locales.yml
+++ b/.github/workflows/build-locales.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: [self-hosed, macos-11]
 
     steps:
     - uses: actions/checkout@v1
