--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,7 +27,7 @@ jobs:
           args: "--no-color -q"
 
       - name: Update Curseforge Translations
-        run: ./cf_translations.sh
+        run: ./update_translations.sh
 
       - name: Package and release
         uses: BigWigsMods/packager@v2
