--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,7 +27,7 @@ jobs:
           args: "--no-color -q"
           
       - name: Update Curseforge Translations
-        run: ./cf_translations.sh
+        run: ./cf_localizations.sh
         env:
           CF_API_KEY: ${{ secrets.CF_API_KEY }}
 
