--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,10 +26,10 @@ jobs:
         with:
           args: "--no-color -q"
           
-      - name: Update Curseforge Translations
-        run: ./cf_localizations.sh
-        env:
-          CF_API_KEY: ${{ secrets.CF_API_KEY }}
+      #- name: Update Curseforge Translations
+      #  run: ./cf_localizations.sh
+      #  env:
+      #    CF_API_KEY: ${{ secrets.CF_API_KEY }}
 
       - name: Package and release
         uses: BigWigsMods/packager@v2
