--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,18 +2,16 @@ name: Package
 
 on:
   push:
+    branches:
+      - main
     tags:
-      - '**'
+      - '*'
+      - "!**-alpha**"
+      - "!**-beta**"
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
-    env:
-      CF_API_KEY: ${{ secrets.CF_API_KEY }}
-      #WOWI_API_TOKEN: ${{ secrets.WOWI_API_TOKEN }}
-      #WAGO_API_TOKEN: ${{ secrets.WAGO_API_TOKEN }}
-      GITHUB_OAUTH: ${{ secrets.GITHUB_TOKEN }}
 
     steps:
       - name: Clone project
@@ -25,6 +23,7 @@ jobs:
         uses: nebularg/actions-luacheck@v1
         with:
           args: "--no-color -q"
+          annotate: warning
           
       #- name: Update Curseforge Translations
       #  run: ./cf_localizations.sh
@@ -33,5 +32,8 @@ jobs:
 
       - name: Package and release
         uses: BigWigsMods/packager@v2
-        with:
-          args: -g cata -w 0
+        env:
+          #CF_API_KEY: ${{ secrets.CF_API_KEY }}
+          GITHUB_OAUTH: ${{ secrets.GITHUB_TOKEN }}
+          #WOWI_API_TOKEN: ${{ secrets.WOWI_API_TOKEN }}
+          #WAGO_API_TOKEN: ${{ secrets.WAGO_API_TOKEN }}
