Attempt to add localizations

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,10 +26,10 @@ jobs:
           args: "--no-color -q"
           annotate: warning
           
-      #- name: Update Curseforge Translations
-      #  run: ./cf_localizations.sh
-      #  env:
-      #    CF_API_KEY: ${{ secrets.CF_API_KEY }}
+      - name: Update Curseforge Translations
+        run: ./cf_localizations.sh
+        #env:
+        #  CF_API_KEY: ${{ secrets.CF_API_KEY }}
 
       - name: Package and release
         uses: BigWigsMods/packager@master
