--- a/.github/workflows/build_dev.yml
+++ b/.github/workflows/build_dev.yml
@@ -11,10 +11,7 @@ jobs:
     environment: Build
 
     env:
-      CF_API_KEY: ${{ secrets.CF_API_KEY }}
       GITHUB_OAUTH: ${{ secrets.GITHUB_TOKEN }}
-      WOWI_API_TOKEN: ${{ secrets.WOWI_API_TOKEN }}
-      WAGO_API_TOKEN: ${{ secrets.WAGO_API_TOKEN }}
 
     steps:
       - name: Clone project
@@ -28,8 +25,10 @@ jobs:
           
       - name: Update Curseforge Translations
         run: ./cf_localizations.sh
+        env:
+          CF_API_KEY: ${{ secrets.CF_API_KEY }}
 
       - name: Package and release
         uses: BigWigsMods/packager@master
         with:
-          args: -d
+          args: -d -z
